# OKX.API-Trade.with-SuperTrend.parameter

./: How.SuperTrend.code.works.md  How.SuperTrend.code.works_cn.md  README.md  README_cn.md  demo-PyAlgoTrade.Ver.py  demo.py  demo_en.py  main.py  pyproject.toml  使用Cython加速TA-Lib库中的函数运行步骤.md  检查代码运行前的K线中 如果过去一段时间 K线最大波动率小于0.2% 则不开仓交易 直到波动率大于这一水平 再进行接下来的开仓操作.py  检查超级趋势指标是否在最近30分钟内发生变化，并在有仓位时平仓.py
