[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.0"
pandas = "^1.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.plugins]

[tool.poetry.extras]
